--- a/Minigame_Mania/Packages/manifest.json
+++ b/Minigame_Mania/Packages/manifest.json
@@ -4,6 +4,9 @@
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.multiplayer.tools": "1.1.1",
+    "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
